--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,17 @@
 .container {
     display: flex;
     flex-direction: column;
+    gap: 16px;
+    width: 50%;
+    margin: 64px auto;
 }
 
 .header {
     border: solid 1px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
